--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --passWithNoTests",
     "prepare": "husky"
   },
   "keywords": [],
@@ -13,9 +13,13 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
+    "@swc/core": "^1.11.22",
+    "@swc/jest": "^0.2.38",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.15.3",
     "eslint": "^9.25.1",
     "husky": "^9.1.7",
+    "jest": "^29.7.0",
     "prettier": "^3.5.3",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3"
