--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.31.1"
+  },
+  "dependencies": {
+    "uuid": "^11.1.0"
   }
 }
